--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<li><a href="page/login.html">Login</a></li>
 		</ul>
 		<div>
-			<p>Log to access T-Chat</p>
+			<p>Log to access Kwick T-Chat</p>
 		</div>
 	</main>
 
